--- a/CellWallClient/app/src/main/res/layout/fragment_login.xml
+++ b/CellWallClient/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity">
+    tools:context=".LoginFragment">
 
     <!-- Login progress -->
     <ProgressBar
@@ -63,4 +63,5 @@
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
