Holds state data using sealed class instances and smart casts

--- a/client/app/src/main/res/layout/login_fragment.xml
+++ b/client/app/src/main/res/layout/login_fragment.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="16px"
     tools:context=".ui.login.LoginFragment">
 
     <ProgressBar
@@ -21,7 +20,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/address_layout"
