--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#43A047</color>
     <color name="colorPrimaryDark">#2e7d32</color>
-    <color name="colorAccent">#EEEEEE</color>
+    <color name="colorAccent">#241023</color>
 </resources>
