--- a/client/app/src/main/res/layout/login_fragment.xml
+++ b/client/app/src/main/res/layout/login_fragment.xml
@@ -21,6 +21,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:padding="16dp">
 
             <com.google.android.material.textfield.TextInputLayout
