--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#43A047</color>
     <color name="colorPrimaryDark">#2e7d32</color>
     <color name="colorAccent">#241023</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
