--- a/client/app/src/main/res/layout/image_fragment.xml
+++ b/client/app/src/main/res/layout/image_fragment.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         tools:src="@tools:sample/backgrounds/scenic[7]" />
 </androidx.constraintlayout.widget.ConstraintLayout>
