Better use of lifecycle aware socket

--- a/client/app/src/main/res/layout/login_fragment.xml
+++ b/client/app/src/main/res/layout/login_fragment.xml
@@ -8,6 +8,22 @@
     android:orientation="vertical"
     tools:context=".ui.login.LoginFragment">
 
+    <View
+        android:id="@+id/status_bar_padding"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="?attr/colorPrimary" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:subtitle="@string/app_name_subtitle"
+        app:title="@string/app_name_main" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
