Moves socket code into Repository pattern

--- a/client/app/src/main/res/values/attrs_reconnect_button.xml
+++ b/client/app/src/main/res/values/attrs_reconnect_button.xml
@@ -1,8 +1,9 @@
 <resources>
     <declare-styleable name="ReconnectButton">
-        <attr name="exampleString" format="string" />
-        <attr name="exampleDimension" format="dimension" />
-        <attr name="exampleColor" format="color" />
-        <attr name="exampleDrawable" format="color|reference" />
+        <attr name="status" format="enum">
+            <enum name="disconnected" value="0" />
+            <enum name="connecting" value="1" />
+            <enum name="connected" value="2" />
+        </attr>
     </declare-styleable>
 </resources>
