Add Up button to login page
The Up button is only shown if the Login page is opened by long-pressing
the reconnect FAB, not on first launch.

--- a/client/app/src/main/res/layout/login_fragment.xml
+++ b/client/app/src/main/res/layout/login_fragment.xml
@@ -22,7 +22,8 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:subtitle="@string/app_name_subtitle"
-        app:title="@string/app_name_main" />
+        app:title="@string/app_name_main"
+        app:navigationIcon="?homeAsUpIndicator" />
 
     <ProgressBar
         android:id="@+id/progressBar"
