--- a/client/app/src/main/res/layout/reconnect_button.xml
+++ b/client/app/src/main/res/layout/reconnect_button.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:indeterminate="true"
-        android:indeterminateOnly="true" />
+        android:indeterminateOnly="true"
+        android:indeterminateTint="@color/colorPrimary" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/action_reconnect"
