Switch to activity for login

--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#43a047</color>
     <color name="colorPrimaryDark">#2e7d32</color>
-    <color name="colorAccent">#241023</color>
+    <color name="colorAccent">#1b5e20</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
