--- a/client/app/src/main/res/values-v21/styles.xml
+++ b/client/app/src/main/res/values-v21/styles.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="BaseAppTheme">
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
-    </style>
-
     <style name="LoginTheme" parent="BaseLoginTheme">
         <item name="android:windowTranslucentStatus">false</item>
         <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
     </style>
 </resources>
