--- a/client/app/src/main/res/layout/login_activity.xml
+++ b/client/app/src/main/res/layout/login_activity.xml
@@ -29,6 +29,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
@@ -38,15 +39,22 @@
                 android:src="@mipmap/ic_fg_trimmed"
                 tools:ignore="ContentDescription" />
 
-            <EditText
-                android:id="@+id/address"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/address_container"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:hint="@string/prompt_address"
-                android:inputType="textUri"
-                android:maxLines="1"
-                android:singleLine="true" />
+                android:layout_marginTop="16dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_address"
+                    android:inputType="textUri"
+                    android:maxLines="1"
+                    android:singleLine="true"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/connect_button"
