--- a/client/app/src/main/res/layout/main_activity.xml
+++ b/client/app/src/main/res/layout/main_activity.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.tigeroakes.cellwallclient.ui.ReconnectButton
+    <com.tigeroakes.cellwallclient.ui.main.ReconnectButton
         android:id="@+id/reconnect_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
