Work on action list

--- a/client/app/src/main/res/layout/actions_fragment.xml
+++ b/client/app/src/main/res/layout/actions_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
     android:name="com.tigeroakes.cellwallclient.ui.actions.ActionsFragment"
@@ -8,6 +7,6 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
+    android:fitsSystemWindows="true"
     tools:context=".ui.actions.ActionsFragment"
     tools:listitem="@layout/action_item" />
