--- a/client/app/src/main/res/layout/large_text_fragment.xml
+++ b/client/app/src/main/res/layout/large_text_fragment.xml
@@ -11,9 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
-        android:text="Hello"
-        android:textSize="96sp"
-        app:fontFamily="@font/lato_light"
+        tools:text="Hello"
+        style="@style/TextAppearance.AppTheme.Headline1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
