Update all state views and add transition

--- a/client/app/src/main/res/layout/main_activity.xml
+++ b/client/app/src/main/res/layout/main_activity.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
     android:animateLayoutChanges="true"
-    tools:context=".MainActivity">
+    tools:context=".ui.main.MainActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
