--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -70,13 +70,23 @@
           android:singleLine="true"/>
       </com.google.android.material.textfield.TextInputLayout>
 
-      <Button
+      <com.google.android.material.button.MaterialButton
         android:id="@+id/connect_button"
         style="?android:textAppearanceSmall"
+        android:backgroundTint="#EFEFEF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/action_login"
+        android:textStyle="bold" />
+      <com.google.android.material.button.MaterialButton
+        android:id="@+id/exit_button"
+        style="?android:textAppearanceSmall"
+        android:backgroundTint="#EFEFEF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/action_exit"
         android:textStyle="bold" />
 
       <LinearLayout
