--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -5,23 +5,23 @@
   android:layout_height="match_parent"
   android:gravity="center_horizontal"
   android:orientation="vertical"
-  android:padding="16dp"
   android:background="#429A46"
   tools:context=".ui.login.LoginActivity">
 
   <!-- Login progress -->
   <ProgressBar
     android:id="@+id/login_progress"
-    style="?android:attr/progressBarStyleLarge"
-    android:layout_width="wrap_content"
+    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:visibility="gone" />
+    android:visibility="visible" />
 
   <ScrollView
     android:id="@+id/login_form"
+    android:padding="16dp"
+    android:layout_weight="1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="0dp"
     android:fillViewport="true">
 
     <LinearLayout
@@ -49,6 +49,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/prompt_address"
+          android:text="http://192.168.50.252:2015/"
           android:inputType="textUri"
           android:maxLines="1"
           android:singleLine="true"/>
