Add a static page for web mode

--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -11,6 +11,9 @@
   <action
     android:id="@+id/action_global_largeTextFragment"
     app:destination="@id/largeTextFragment" />
+  <action
+    android:id="@+id/action_global_webFragment"
+    app:destination="@id/webFragment" />
 
   <fragment
     android:id="@+id/splash"
