--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -4,5 +4,7 @@
         <domain includeSubdomains="false">10.0.2.2</domain>
         <domain includeSubdomains="false">127.0.0.1</domain>
         <domain includeSubdomains="false">192.168.50.252</domain>
+        <domain includeSubdomains="false">raspberrypi.local</domain>
+        <domain includeSubdomains="false">emerald.local</domain>
     </domain-config>
 </network-security-config>
