--- a/android/app/src/main/res/layout/fragment_splash.xml
+++ b/android/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="#1B5E20"
-  tools:context=".ui.LoadingFragment">
+  tools:context=".ui.splash.SplashFragment">
 
   <ImageView
     android:id="@+id/logo"
