--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -14,18 +14,14 @@
   <action
     android:id="@+id/action_global_webFragment"
     app:destination="@id/webFragment" />
+  <action
+    android:id="@+id/action_global_imageFragment"
+    app:destination="@id/imageFragment" />
 
   <fragment
     android:id="@+id/splash"
     android:name="com.tigeroakes.cellwallclient.ui.splash.SplashFragment"
-    tools:layout="@layout/fragment_splash">
-    <action
-      android:id="@+id/action_splash_to_largeTextFragment"
-      app:destination="@id/largeTextFragment" />
-    <action
-      android:id="@+id/action_splash_to_webFragment"
-      app:destination="@id/webFragment" />
-  </fragment>
+    tools:layout="@layout/fragment_splash" />
 
   <fragment
     android:id="@+id/largeTextFragment"
@@ -44,6 +40,17 @@
     tools:layout="@layout/fragment_web">
     <argument
       android:name="url"
+      app:argType="string" />
+  </fragment>
+  <fragment
+    android:id="@+id/imageFragment"
+    android:name="com.tigeroakes.cellwallclient.ui.image.ImageFragment"
+    tools:layout="@layout/fragment_image">
+    <argument
+      android:name="src"
+      app:argType="string" />
+    <argument
+      android:name="scaleType"
       app:argType="string" />
   </fragment>
 </navigation>
