Create abstraction for different cell state formats

--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -31,7 +31,7 @@
       android:name="text"
       app:argType="string" />
     <argument
-      android:name="background"
+      android:name="backgroundColor"
       app:argType="integer" />
   </fragment>
   <fragment
