--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -20,12 +20,12 @@
 
   <fragment
     android:id="@+id/splash"
-    android:name="com.tigeroakes.cellwallclient.ui.splash.SplashFragment"
+    android:name="com.tigeroakes.cellwall.client.ui.splash.SplashFragment"
     tools:layout="@layout/fragment_splash" />
 
   <fragment
     android:id="@+id/largeTextFragment"
-    android:name="com.tigeroakes.cellwallclient.ui.text.LargeTextFragment"
+    android:name="com.tigeroakes.cellwall.client.ui.text.LargeTextFragment"
     tools:layout="@layout/fragment_large_text">
     <argument
       android:name="text"
@@ -36,7 +36,7 @@
   </fragment>
   <fragment
     android:id="@+id/webFragment"
-    android:name="com.tigeroakes.cellwallclient.ui.web.WebFragment"
+    android:name="com.tigeroakes.cellwall.client.ui.web.WebFragment"
     tools:layout="@layout/fragment_web">
     <argument
       android:name="url"
@@ -44,7 +44,7 @@
   </fragment>
   <fragment
     android:id="@+id/imageFragment"
-    android:name="com.tigeroakes.cellwallclient.ui.image.ImageFragment"
+    android:name="com.tigeroakes.cellwall.client.ui.image.ImageFragment"
     tools:layout="@layout/fragment_image">
     <argument
       android:name="src"
