--- a/android/app/src/main/res/layout/fragment_splash.xml
+++ b/android/app/src/main/res/layout/fragment_splash.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="#1B5E20"
+  android:gravity="center"
+  android:orientation="vertical"
   tools:context=".ui.splash.SplashFragment">
 
   <ImageView
     android:id="@+id/logo"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_marginBottom="32dp"
     android:importantForAccessibility="no"
     android:src="@mipmap/ic_launcher" />
-</FrameLayout>
+
+  <TextView
+    android:id="@+id/debug_density"
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="64dp"
+    android:textColor="#429A46"
+    android:text="@string/debug_density" />
+
+  <TextView
+    android:id="@+id/debug_display"
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="64dp"
+    android:textColor="#429A46"
+    android:text="@string/debug_display" />
+</LinearLayout>
