--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,6 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:name="androidx.navigation.fragment.NavHostFragment"
+  android:keepScreenOn="true"
   app:navGraph="@navigation/nav_graph"
   app:defaultNavHost="true" />
